[gd_scene load_steps=6 format=2]

[ext_resource path="res://effects/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/MainMenuUI.gd" type="Script" id=3]
[ext_resource path="res://sfx/RhySD-BackButton.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/RhySD-StartButton.wav" type="AudioStream" id=5]
[ext_resource path="res://fonts/logo_font.tres" type="DynamicFont" id=6]

[node name="MainMenuUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
start_scene = "res://scenes/Game.tscn"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 1588.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2"]
visible = false
margin_top = 69.0
margin_right = 1588.0
margin_bottom = 270.0
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[rainbow][wave] TempoVR"
text = "[rainbow][wave] TempoVR"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 171.0
margin_right = 1588.0
margin_bottom = 428.0
rect_min_size = Vector2( 512, 128 )
custom_constants/separation = 500
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 614.0
margin_bottom = 257.0
rect_min_size = Vector2( 350, 128 )
shortcut_in_tooltip = false
text = "start"

[node name="Quit" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_left = 1114.0
margin_right = 1588.0
margin_bottom = 257.0
rect_min_size = Vector2( 350, 128 )
shortcut_in_tooltip = false
text = "quit"

[node name="AcceptSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
